# CM

./: .gitignore  CMakeLists-client.txt  CMakeLists-server.txt  CMakeLists.txt
ex1/: MyString.c  MyString.h  MyStringMacros.h  MyStringMain.c  MyStringTest.c  MyStringUnitTests.c  MyStringUtils.c  MyStringUtils.h  cmake.txt  main.c
ex2/: Macros.h  Main.c  ReleaseNotes.txt  config.json  ex2  nitz.txt
ex2/client/: Client.c  Client.h  ClientMain.c
ex2/communication/: CommunicationMethods.c  CommunicationMethods.h  FileMethod.c  FileMethod.h  Message.c  Message.h  MessageProtocol.c  MessageProtocol.h  SocketMethod.c  SocketMethod.h
ex2/communicationMethods/include/: CommunicationMethods.h  FileMethod.h  SocketMethod.h
ex2/communicationMethods/src/: CommunicationMethods.c  FileMethod.c  SocketMethod.c
ex2/communicationProtocol/include/: Message.h  MessageProtocol.h
ex2/communicationProtocol/src/: Message.c  MessageProtocol.c
ex2/makefile/: makefile
ex2/mymakefile/: makefile
ex2/server/: Server.c  Server.h  ServerMain.c
ex2/temp/: Server.c
ex2/utils/include/: base64.h  config.h  fileUtils.h  nxjson.h
ex2/utils/src/: base64.c  config.c  fileUtils.c  nxjson.c
